--- a/package.json
+++ b/package.json
@@ -1,18 +1,4 @@
 {
-  "name": "jeancarlos.dev",
-  "type": "module",
-  "version": "0.1.0",
-  "scripts": {
-    "dev": "astro dev",
-    "dev:network": "astro dev --host",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "preview:network": "astro dev --host",
-    "astro": "astro",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
-  },
   "dependencies": {
     "@astrojs/check": "^0.6.0",
     "@astrojs/mdx": "^3.0.0",
@@ -29,5 +15,19 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
-  }
+  },
+  "name": "jeancarlos.dev",
+  "scripts": {
+    "astro": "astro",
+    "build": "astro check && astro build",
+    "dev": "astro dev",
+    "dev:network": "astro dev --host",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "preview": "astro preview",
+    "preview:network": "astro dev --host",
+    "start": "astro dev"
+  },
+  "type": "module",
+  "version": "0.1.0"
 }
