--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,23 @@
 {
-  "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
-    "strictNullChecks": true,
     "baseUrl": ".",
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js",
     "paths": {
       "@*": [
         "src/*"
       ]
     },
-    "jsx": "preserve",
-    "jsxImportSource": "solid-js"
+    "strictNullChecks": true
   },
+  "exclude": [
+    "dist",
+    "node_modules"
+  ],
+  "extends": "astro/tsconfigs/strict",
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.astro"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules"
   ]
 }
